--- a/src/app/adminbody/adminbody.component.html
+++ b/src/app/adminbody/adminbody.component.html
@@ -31,12 +31,12 @@
         </form>
       </div>
 
-    <div class="row align-items-start p-3 ed-del" *ngFor="let doctor of doctors; let i = index">
+    <div class="row align-items-start p-5 ed-del doctorss" *ngFor="let doctor of doctors; let i = index">
         <div class="col align-self-center">
             <div class="mb-3">
                 <label class="form-label">Doctor Name:</label>
                 <div *ngIf="isEditing[i]">
-                    <input type="text" class="form-control" (ngModel)="doctor.doctorName" />
+                    <input type="text" class="form-control" [(ngModel)]="doctor.doctorName" />
                 </div>
             </div>
             <div *ngIf="!isEditing[i]">
@@ -47,7 +47,7 @@
             <div class="mb-3">
                 <label class="form-label">Specialization:</label>
                 <div *ngIf="isEditing[i]">
-                    <input type="text" class="form-control" (ngModel)="doctor.doctorSpecialization" />
+                    <input type="text" class="form-control" [(ngModel)]="doctor.doctorSpecialization" />
                 </div>
                 <div *ngIf="!isEditing[i]">
                     <div>{{doctor.doctorSpecialization }}</div>
@@ -56,7 +56,7 @@
             <div class="mb-3">
                 <label class="form-label">Location:</label>
                 <div *ngIf="isEditing[i]">
-                    <input type="text" class="form-control" (ngModel)="doctor.doctorLocation" />
+                    <input type="text" class="form-control" [(ngModel)]="doctor.doctorLocation" />
                 </div>
                 <div *ngIf="!isEditing[i]">
                     <div>{{doctor.doctorLocation }}</div>
@@ -65,18 +65,18 @@
             <div class="mb-3">
                 <label class="form-label">Rating:</label>
                 <div *ngIf="isEditing[i]">
-                    <input type="text" class="form-control" (ngModel)="doctor.doctorRating" />
+                    <input type="text" class="form-control" [(ngModel)]="doctor.doctorRating" />
                 </div>
                 <div *ngIf="!isEditing[i]">
-                    <div>{{doctor.doctorRating }}</div>
+                    <div>{{doctor.doctorRating}}</div>
                 </div>
             </div>
         </div>
         <div class="col align-self-center">
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary" (click)="EditDoctor(i)">
+                <button type="button" class="btn btn-primary" [ngClass]="{'btn-primary-disabled': !isEditing[i]}" (click)="isEditing[i] ? EditDoctor(doctor, i) : isEditing[i] = true">
                     {{ isEditing[i] ? 'Save' : 'Edit' }}
-                </button>
+                  </button>
                 <button type="button" class="btn btn-danger" (click)="deleteDoctor(i)">
                     Delete
                 </button>
