--- a/src/app/adminhomr/adminhomr.component.html
+++ b/src/app/adminhomr/adminhomr.component.html
@@ -1,7 +1,7 @@
 <div class="admin">
-    <app-navbar></app-navbar>  
+    <app-navbaradmin></app-navbaradmin>  
     <div class="adminbody">
-        <app-sidebar></app-sidebar> 
+        <app-sidebaradmin></app-sidebaradmin> 
         <app-adminbody></app-adminbody>
     </div>
 </div>
