--- a/src/app/adminbody/adminbody.component.css
+++ b/src/app/adminbody/adminbody.component.css
@@ -3,7 +3,6 @@
     left: 20rem;
     top: 6rem;
     width: 69rem;
-    background-color: #c1e7f8;
     margin-bottom: 0%;
   }
   
@@ -72,3 +71,7 @@
     }
   }
   
+  .doctorss{
+    border: 1px solid grey;
+    box-shadow: 0px 6px 34px -3px rgba(0, 0, 0, 0.5);
+}
