admin service complete

--- a/src/app/userbody/userbody.component.html
+++ b/src/app/userbody/userbody.component.html
@@ -13,19 +13,32 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Search Doctors by Specialization"
+          placeholder="Search Doctors"
+          [(ngModel)]="searchDoctorName"
         />
-        <button class="btn btn-primary" type="button">Search</button>
+        <select class="form-select" id="location" [(ngModel)]="selectedLocation">
+          <option value="default">Select Location</option>
+          <option value="ekm">ekm</option>
+          <option value="clt">clt</option>
+          <option value="tsr">tsr</option>
+        </select>
+        <select class="form-select" id="specialization" [(ngModel)]="selectedSpecialization">
+          <option value="default">Select specialization</option>
+          <option value="cardiology">Cardiology</option>
+          <option value="dermatology">Dermatology</option>
+          <option value="orthopedics">Orthopedics</option>
+        </select>
+        <button class="btn btn-primary" type="button" (click)="searchDoctors()">Search</button>
       </div>
     </div>
   </div>
 
-  <div class="doctorss">
-    <div class="row align-items-start add-doctor p-3">
+  <div class="doctorss" *ngFor="let doctor of doctors; let i = index">
+    <div class="row align-items-start add-doctor p-3" >
       <div class="col align-self-center">
         <div class="mb-3">
           <label class="form-label">Doctor Name</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control"  readonly [(ngModel)]="doctor.doctorName"/>
         </div><br>
         <div class="daytime">
         <p class="day">Mon-Fri</p><p class="time">9AM-6PM</p>
@@ -38,31 +51,31 @@
       <div class="col align-self-center">
         <div class="mb-3">
           <label class="form-label">Specialization</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" readonly [(ngModel)]="doctor.doctorSpecialization"/>
         </div>
         <div class="mb-3">
           <label class="form-label">Location</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" readonly [(ngModel)]="doctor.doctorLocation"/>
         </div>
         <div class="mb-3">
           <label class="form-label">Rating</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" readonly [(ngModel)]="doctor.doctorRating"/>
         </div>
       </div>
       <div class="col align-self-center">
         <div class="mb-3">
           <label class="form-label">Appoinment Date</label>
-          <input type="date" class="form-control" />
+          <input type="date" class="form-control" [(ngModel)]="appointmentDate"/>
         </div>
 
         <div class="mb-3">
           <label class="form-label">Appoinment Time</label>
-          <input type="time" class="form-control" />
+          <input type="time" class="form-control" [(ngModel)]="appointmentTime"/>
         </div>
       </div>
       <div class="col align-self-center">
         <div class="d-flex justify-content-center">
-          <button type="button" class="btn btn-success">Book</button>
+          <button type="button" class="btn btn-success" (click)="bookAppointment()">Book</button>
         </div>
       </div>
     </div>
