--- a/src/app/ratingbody/ratingbody.component.html
+++ b/src/app/ratingbody/ratingbody.component.html
@@ -2,46 +2,56 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <div class="homebody">
-    <div class="row align-items-start p-3">
-        <div class="col align-self-center">
-          <h4>List of doctors</h4>
-        </div>
-        <div class="col align-self-center">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search Doctors">
-            <button class="btn btn-primary" type="button">Search</button>
-          </div>
-        </div>
-      </div> 
+  <div class="row align-items-start p-3">
+    <div class="col align-self-center">
+      <h4>List of Appointments</h4>
+    </div>
+    <div class="col align-self-center">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search Doctors" [(ngModel)]="searchDoctorName">
+        <button class="btn btn-primary" type="button" (click)="searchDoctors()">Search</button>
+      </div>
+    </div>
+  </div>
 
-      <div class="doctors"> 
-      <div class="row align-items-start add-doctor p-3">
-        <div class="col align-self-center">
-          <div class="mb-3">
-            <label class="form-label">Doctor Name</label>
-            <input type="text" class="form-control">
-          </div>
+  <div class="doctors">
+    <div class="row align-items-start add-doctor p-3" *ngFor="let appointment of appointments; let i = index">
+      <div class="col align-self-center">
+        <div class="mb-3">
+          <label class="form-label">Doctor Name</label>
+          <input type="text" class="form-control" readonly [(ngModel)]="appointment.doctorName" />
         </div>
-        <div class="col align-self-center">
-          <div class="mb-3">
-            <label class="form-label">Specialization</label>
-            <input type="text" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Location</label>
-            <input type="text" class="form-control">
-          </div>  
+      </div>
+      <div class="col align-self-center">
+        <div class="mb-3">
+          <label class="form-label">Specialization</label>
+          <input type="text" class="form-control" readonly [(ngModel)]="appointment.doctorSpecialization">
         </div>
-        <div class="col align-self-center">
-          <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-success" >Rate</button>
-          </div>
+        <div class="mb-3">
+          <label class="form-label">Location</label>
+          <input type="text" class="form-control" readonly [(ngModel)]="appointment.doctorLocation">
         </div>
-      </div>  
-    </div> 
-     
+      </div>
+      <div class="col align-self-center">
+        <div class="mb-3">
+          <label class="form-label">Appointment Date</label>
+          <input type="text" class="form-control" readonly [(ngModel)]="appointment.appointmentDate">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Appointment Time</label>
+          <input type="text" class="form-control" readonly [(ngModel)]="appointment.appointmentTime">
+        </div>
+      </div>
+      <div class="col align-self-center">
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-success" routerLink="/ratereview">Rate</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 
 </div>
