--- a/src/app/userbody/userbody.component.html
+++ b/src/app/userbody/userbody.component.html
@@ -65,17 +65,17 @@
       <div class="col align-self-center">
         <div class="mb-3">
           <label class="form-label">Appoinment Date</label>
-          <input type="date" class="form-control" [(ngModel)]="appointmentDate"/>
+          <input type="date" class="form-control" #appointmentDateInput>
         </div>
 
         <div class="mb-3">
           <label class="form-label">Appoinment Time</label>
-          <input type="time" class="form-control" [(ngModel)]="appointmentTime"/>
+          <input type="time" class="form-control" #appointmentTimeInput/>
         </div>
       </div>
       <div class="col align-self-center">
         <div class="d-flex justify-content-center">
-          <button type="button" class="btn btn-success" (click)="bookAppointment()">Book</button>
+          <button type="button" class="btn btn-success" (click)="bookAppointment(doctor,appointmentDateInput.value,appointmentTimeInput.value)">Book</button>
         </div>
       </div>
     </div>
