--- a/src/app/ratingbody/ratingbody.component.css
+++ b/src/app/ratingbody/ratingbody.component.css
@@ -24,3 +24,184 @@ color:rgb(255, 255, 255);
     border: 1px solid grey;
     box-shadow: 0px 6px 34px -3px rgba(0, 0, 0, 0.5);
 }
+
+.btn {
+
+
+
+
+  min-width: 150px;
+
+
+
+
+  height: 40px;
+
+
+
+
+  border-radius: 20px;
+
+
+
+
+}
+
+
+
+
+.navbar {
+
+
+
+
+  background-color: rgb(187, 54, 54);
+
+
+
+
+}
+
+
+
+
+.edit-btn {
+
+
+
+
+  margin-bottom: 20px;
+
+
+
+
+}
+
+
+.rate {
+
+  border-bottom-right-radius: 12px;
+
+  border-bottom-left-radius: 12px;
+
+}
+
+
+
+
+.rating {
+
+  display: flex;
+
+  flex-direction: row-reverse;
+
+  justify-content: center;
+
+}
+
+
+
+
+.rating>input {
+
+  display: none;
+
+}
+
+
+
+
+.rating>label {
+
+  position: relative;
+
+  width: 1em;
+
+  font-size: 30px;
+
+  font-weight: 300;
+
+  color: #f0dd7e;
+
+  cursor: pointer;
+
+}
+
+
+
+
+.rating>label::before {
+
+  content: "\2605";
+
+  position: absolute;
+
+  opacity: 0;
+
+}
+
+
+
+
+.rating>label:hover:before,
+
+.rating>label:hover~label:before {
+
+  opacity: 1 !important;
+
+}
+
+
+
+
+.rating>input:checked~label:before {
+
+  opacity: 1;
+
+}
+
+
+
+
+.rating:hover>input:checked~label:before {
+
+  opacity: 0.4;
+
+}
+
+
+
+
+.buttons {
+
+  top: 36px;
+
+  position: relative;
+
+}
+
+
+
+
+.rating-submit {
+
+  border-radius: 15px;
+
+  /* color:green; */
+
+  height: 49px;
+
+  background-color: rgb(128, 128, 248);
+
+  cursor: pointer;
+
+}
+
+
+
+
+.rating-submit:hover {
+
+  color:rgb(0, 0, 0);
+
+}
