--- a/src/app/ratingbody/ratingbody.component.html
+++ b/src/app/ratingbody/ratingbody.component.html
@@ -54,23 +54,23 @@
           </div>
           <div>
             <div class="rate bg-secondary py-3 text-white mt-3">
-              <div class="rating"> <input type="radio" name="rating" value="5" id="5" (ngModel)="rating.rating">
+              <div class="rating"> <input type="radio" name="rating" value="5" id="5" #rating>
                 <label for="5">☆</label>
-                <input type="radio" name="rating" value="4" id="4" (ngModel)="rating.rating">
+                <input type="radio" name="rating" value="4" id="4" #rating>
                 <label for="4">☆</label>
-                <input type="radio" name="rating" value="3" id="3" (ngModel)="rating.rating">
+                <input type="radio" name="rating" value="3" id="3" #rating>
                 <label for="3">☆</label>
-                <input type="radio" name="rating" value="2" id="2" (ngModel)="rating.rating">
+                <input type="radio" name="rating" value="2" id="2" #rating>
                 <label for="2">☆</label>
-                <input type="radio" name="rating" value="1" id="1" (ngModel)="rating.rating">
+                <input type="radio" name="rating" value="1" id="1" #rating>
                 <label for="1">☆</label>
               </div>
               <div class="review-box px-4 mt-3">
                 <label for="review"></label>
-                <textarea id="review" class="form-control" rows="3" placeholder="Write your experience" (ngModel)="rating.review"></textarea>
+                <textarea id="review" class="form-control" rows="3" placeholder="Write your experience" #review></textarea>
               </div>
               <div class="buttons px-4 mt-0">
-                <button class="btn btn-warning btn-block rating-submit" (click)="submitRating(appointment)">Submit</button>
+                <button class="btn btn-warning btn-block rating-submit" (click)="submitRating(appointment,rating.value,review.value)">Submit</button>
               </div>
             </div>
           </div>
