--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
       <img src='/assets/patient.png'width="90" height="90">
     </div><br>
     <p>User Name</p>
-    <p>My Appointments</p>
+    <button type="button" routerLink="/myappointment">My Appointments</button>
     <p>My Ratings</p><br><br>
     <button type="button" class="btn btn-success" routerLink="/landing">Sign out</button>
   </div>
